--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "@emotion/styled": "^11.14.0",
     "@mui/lab": "^6.0.0-beta.30",
     "@mui/material": "^6.4.7",
+    "@radix-ui/react-icons": "^1.3.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
+    "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-native-paper": "^5.13.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "shadcn-ui": "^0.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
